# c-infinity-utilities

./: CMakeLists.txt  InfinityProjectsCpp.sln  README.md
InfinityArchiveTools/: InfinityArchiveTools.cpp  InfinityArchiveTools.vcxproj  InfinityArchiveTools.vcxproj.filters
InfinityCmake/: CMakeLists.txt  CMakeSettings.json
InfinityCmake/InfinityPcre/: CMakeLists.txt  InfinityPcre.h
InfinityCrashlytics/: InfinityCrashlytics.cpp  InfinityCrashlytics.h  InfinityCrashlytics.vcxproj  InfinityCrashlytics.vcxproj.filters  MemoryTools.h  Utils.cpp  Utils.h  debug.cpp  debug.h  dllmain.cpp
InfinityDebugTools/: CDiaBSTR.cpp  CDiaBSTR.h  Dia2Tools.cpp  Dia2Tools.h  Dia2ToolsEnums.cpp  Dia2ToolsEnums.h  Dump.txt  InfinityDebugTools.cpp  InfinityDebugTools.vcxproj  InfinityDebugTools.vcxproj.filters  InfinityNative.cpp  InfinityNative.h  MASMStackTrace.asm  MapFile_old.cpp  MapFile_old.h  MemoryTools_old.h  StackWalker.h  Utils.cpp  Utils.h  debug_old.cpp  debug_old.h
InfinityDeviceTools/: InfinityDeviceTools.cpp  InfinityDeviceTools.vcxproj  InfinityDeviceTools.vcxproj.filters
InfinityGui/: Button.cpp  Button.h  EditText.cpp  EditText.h  FilePicker.cpp  FilePicker.h  InfinityGdiPlus.cpp  InfinityGdiPlus.h  InfinityGui.vcxproj  InfinityGui.vcxproj.filters  LinearLayout.cpp  LinearLayout.h  SimpleDialog.cpp  SimpleDialog.h  TextView.cpp  TextView.h  View.cpp  View.h  dllmain.cpp
InfinityLastInput/: ArrayList.h  InfinityLastInput.cpp  InfinityLastInput.vcxproj  InfinityLastInput.vcxproj.filters  KeyBoardUtils.cpp  KeyBoardUtils.h  KeyInfo.cpp  KeyInfo.h  StringHelper.cpp  StringHelper.h
InfinityNativeSharp/: pch.cpp  (+7 more)
(+216 files in other folders)
